# MultiDB_MCP

./: postgres_agent.py  postgres_mcp.py
Query_MCP/: README.md  agent.py  amazon_backup.csv  excel_user.xlsx  excel_user_1.xlsx  mongodb_agent.py  mongodb_mcp.py  mysql_agent.py  mysql_agent_old.py  mysql_mcp.py  mysql_mcp_OLD.py  postgres_agent.py  postgres_mcp.py  pyproject.toml  query_response_mysql.docx  requirement.txt  snowflake_agent.py  snowflake_mcp.py  sqlite_agent.py  sqlite_mcp.py  stocks.db
